<resources>
    <string name="app_name">E-Lifouta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loginlabel">Connexion Lifouta</string>
    <string name="numcompte">Numéro du compte</string>
    <string name="lifpin">PIN du compte</string>
    <string name="labelConnexion">Connexion</string>
    <string name="noimei">Dispositif sans IMEI</string>
    <string name="impossible">Impossible de se connecter</string>
    <string name="confirmlabel">Confirmation de la connexion</string>
    <string name="labelotpcode">Code OTP</string>
    <string name="labelValider">Valider</string>
    <string name="nosms">SMS non reçu? cliquer pour renvoyer</string>
    <string name="payment">Paiement</string>
    <string name="recipient">Bénéficiaire</string>
    <string name="pinclient">PIN compte</string>
    <string name="montant">Montant</string>
    <string name="motif">Motif de paiement</string>
    <string name="labelfinish">Valider</string>
    <string name="confirmationpayment">Confirmation Paiement</string>
    <string name="opt">OTP</string>
    <string name="virement">Virement</string>
    <string name="comptecash">Transfert Compte à Cash</string>
    <string name="recifname">Prénom bénéficiaire</string>
    <string name="recilname">Nom bénéficiaire</string>
    <string name="reciphone">Portable bénéficiaire</string>
</resources>
